fix: nested collapse icon

--- a/src/unicms_template_unical/static/css/unicms_unical.scss
+++ b/src/unicms_template_unical/static/css/unicms_unical.scss
@@ -382,6 +382,11 @@ a .badge-grey-unical.selected {
     font-weight: normal;
 }
 
+.collapse-body .collapse-header button[aria-expanded="true"]::before {
+    height: 1.5rem;
+    width: 1.5rem;
+}
+
 .nav-tabs .nav-link,
 .nav-tabs .nav-link:hover {
     color: $light_grey_unical;
